deleted some unused imports minor changes, added ganred method